<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/title_activity_sign_in"
            android:textStyle="bold|italic"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtsigninEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Enter EmailID"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtsigninPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#ffffff"
        android:background="#ff444444"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="5dp"
        android:layout_weight="1"
        android:text="@string/title_activity_sign_in" />


        <Button
            android:id="@+id/btnSignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#ff444444"
            android:textColor="#ffffff"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="5dp"
            android:layout_weight="1"
            android:text="@string/title_activity_sign_up" />
</LinearLayout>
        <Button
        android:id="@+id/btnForgotPwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
            android:background="#ff444444"
            android:textColor="#ffffff"
            android:layout_marginRight="15dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
            
        android:padding="5dp"
        android:text="@string/title_activity_forgot_password" />


</LinearLayout></ScrollView>